<resources>
    <string name="app_name">Assignment2Task2</string>
    <string name="header">header</string>
    <string name="filling">Filling |</string>
    <string name="beeficon">beeficon</string>
    <string name="chickenicon">chickenicon</string>
    <string name="hamicon">hamicon</string>
    <string name="side_selection">Side Selection |</string>
    <string name="kebabicon">kebabicon</string>
    <string name="tomatoicon">tomatoIcon</string>
    <string name="lettuceicon">lettuceicon</string>
    <string name="onionsicon">onionsicon</string>
    <string name="cheeseicon">cheeseicon</string>
    <string name="size">Size</string>
    <string name="_6_inch">6 inch</string>
    <string name="_9_inch">9 inch</string>
    <string name="_12_inch">12 inch</string>
    <string name="sandwichicon">sandwichicon</string>
    <string name="total">Total:</string>
    <string name="rm_0_00">RM 0.00</string>
    <string name="orderbutton">orderbutton</string>
    <string name="resetbutton">resetbutton</string>
    <string name="rm_format" />
    <string name="my_sandwich_bar">My Sandwich Bar</string>
    <string name="side">Side |</string>
    <string name="add_on">Add-on</string>
    <string name="tea">Tea</string>
    <string name="coffee">Coffee</string>
    <string name="french_fries">French Fries</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipebutton1">swipebutton1</string>
    <string name="swipebutton2">swipebutton2</string>
    <string name="bannersandwich">bannerSandwich</string>
    <string name="salmonicon">salmonicon</string>
    <string name="sandwich2banner">sandwich2Banner</string>
    <string name="rm">RM</string>
    <string name="dot1">dot1</string>
    <string name="dot2">dot2</string>
</resources>