<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentTwo"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/sandwich2"
        android:contentDescription="@string/sandwich2banner"/>

    <TextView
        android:id="@+id/textViewAddOn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/feecd5"
        android:text="@string/add_on"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/_84502b"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/radioButtonGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioTea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/tea"
            android:layout_margin="10dp"/>

        <RadioButton
            android:id="@+id/radioCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/coffee"
            android:layout_margin="10dp"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/radioFries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/french_fries"
            android:layout_margin="10dp"
            android:layout_weight="1"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sandwich_icon"
            android:contentDescription="@string/sandwichicon"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:layout_marginHorizontal="10dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/textViewPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rm"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/d83936"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButtonPlaceOrder"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/button_order"
            android:contentDescription="@string/orderbutton"/>

        <ImageButton
            android:id="@+id/imageButtonReset"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/button_reset"
            android:contentDescription="@string/resetbutton"/>

    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/circle_button_background2"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:contentDescription="@string/swipebutton2"/>

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/circle_button_background"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView11"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/swipebutton1"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>